# arduino-password-vault

./: .gitignore  LICENSE  README.md
ard/: main.ino
ard/main/: main.ino
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  constants.rs  crypto.rs  main.rs  manager.rs  serial.rs  test_file.rs  vault.rs
doc/: dokumentace.md
