[package]
name = "vault-cli"
version = "0.1.0"
edition = "2024"
authors = ["Lukas Drobek"]
description = "CLI application for an Arduino-based password vault"

[dependencies]
serialport  = "4.7.1"   # Serial communication with Arduino
argon2      = "0.5.3"   # Master password key derivation using Argon2id
aes-gcm     = "0.10.3"  # Vault encryption/decryption using AES256-GCM
clap        = { version = "4.5.0", features = ["derive"] }
anyhow      = "1.0"     # Error handling
zeroize     = { version = "1.8", features = ["derive"] }
dialoguer   = "0.11"    # Password prompt
rand        = "0.8"     # Random salt generation
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"     # Serializing/deserializing data
hex         = "0.4"     # Hex encoding/decoding